# awesome-online-activities

./: .gitignore  README.md  index.md  pyproject.toml
.github/workflows/: main.yml
awesome_online_activities/: app.py
list/: also.md  index.md  platform.md  social.md
list/platform/: amongus.md  curvefever.md
list/social/: number42.md  reverse_pictionary.md  what_the_movie.md
